--- a/News_Articles/text_analysis.ipynb
+++ b/News_Articles/text_analysis.ipynb
@@ -73,12 +73,7 @@
     "\n",
     "        current_content += line # add processed line to current_content\n",
     "\n",
-    "    # os.chdir('./')\n",
-    "    # # if not os.path.exists(new_filename):\n",
-    "    # #     new_file = open (new_filename,'w', encoding=\"utf-8\", errors='ignore') # create into new file\n",
-    "    # # else:\n",
-    "    # #     new_file = open (new_filename,'a', encoding=\"utf-8\", errors='ignore') # open new file\n",
-    "   \n",
+    "    # write current cleaned content into newly named file\n",
     "    with open(new_filename, \"w\") as new_file:\n",
     "        new_file.write(current_content)\n",
     "    new_file.close()\n",
