--- a/Visualizations.qmd
+++ b/Visualizations.qmd
@@ -5,6 +5,8 @@ format: html
 
 ```{r}
 library(ggplot2)
+library(dplyr)
+library(readr)
 data <- read_csv("Voter_Registry_clean.csv")
 ```
 
@@ -21,18 +23,20 @@ data$year_vote <- year(data$`VOTER REG DATE`)
 # create the database for the first visualization
 ```{r}
 data_vis1 <- data |>
-  filter(is.na(`STREET NAME`),
-         year_vote >= 1990)
+  filter(year_vote >= 1990) |>
+  filter(is.na(`STREET NAME`))
 ```
 
 # create a barplot
 ```{r}
 ggplot(data = data_vis1, aes(x = as.factor(year_vote), fill = PARTY)) +
   geom_bar() +
+  scale_fill_manual(values = c("blue", "green", "purple", "red", "gray"))+
   labs(title = "What happened in 2002 and 2003 with people registered to vote?",
        x = "Years",
        y = "Number of people volting",
-       fill = "Party")
+       fill = "Party") +
+  theme_classic()
 ```
 
 # try to prove that registration dates did not seem to correspond to the dates of birth listed
@@ -54,12 +58,14 @@ library(patchwork)
 combined_year <- plot_year1 + plot_year2
 combined_year
 ```
+This is not working!
 
 # Another way
 
 ```{r}
 data_vis2 <- data |>
-  mutate(years_old_vote = year_vote - year_birth)
+  mutate(years_old_vote = year_vote - year_birth) |>
+  filter(years_old_vote <= 18)
 ```
 
 ```{r}
