--- a/Final_Report.qmd
+++ b/Final_Report.qmd
@@ -71,17 +71,22 @@ data$year_birth <- year(data$DOB)
 # create df for second visualization
 data_vis2 <- data |>
   mutate(years_old_vote = year_vote - year_birth) |>
-  filter(years_old_vote <= 17)
+  filter(years_old_vote <= 17) |>
+  mutate(status = case_when(years_old_vote < 0 ~ "Impossible",
+                            years_old_vote >= 0 & years_old_vote <= 17 ~ "Illegal",
+                            TRUE ~ "Legal"))
 ```
 
 ```{r, echo = FALSE}
-ggplot(data = data_vis2, aes(x = as.factor(years_old_vote))) + 
+ggplot(data = data_vis2, aes(x = as.factor(years_old_vote), fill = status)) + 
   geom_bar() + 
-  labs(title = "Voter Registration Age",
-       x = "Age",
-       y = "Count") +
+  labs(title = "At what age are people registered to vote?",
+       x = "Age when people are registered to vote",
+       y = "Number of people",
+       fill = "Voting Status") +
   geom_text(stat = 'count', aes(label = after_stat(count)), vjust = -0.5) +
-  theme_minimal()
+  theme_minimal() +
+  scale_fill_manual(values = c("red3", "snow4"))
 ```
 
 
