--- a/Final_Report.qmd
+++ b/Final_Report.qmd
@@ -94,7 +94,7 @@ ggplot(data = data_vis2, aes(x = as.factor(years_old_vote), fill = status)) +
 Political corruption through potential fraud and connections to suspicious international stakeholders seems to have played a big part in the downfall of Alderwood. The main players involved in these deceptive activities are shown in the figure below in @fig-network
 
 
-![timeline](network_diagram.png){#fig-network}
+![Network Diagram](network_diagram.png){#fig-network}
 
 
 
